Fixed spacing style issue in small screen

--- a/frontend/src/containers/AboutPage/AboutPage.scss
+++ b/frontend/src/containers/AboutPage/AboutPage.scss
@@ -97,6 +97,14 @@
     border-radius: 20px;
     background-color: var(--bg-white-color);
 
+    @media screen and (max-width: 768px) {
+      padding: 1.5rem;
+    }
+
+    @media screen and (max-width: 340px) {
+      padding: 1rem;
+    }
+
     &-top {
       @include flex-column-center;
       gap: 2rem;
